# api

./: Cargo.toml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: lib.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: lib.rs
crates/libs/lib-rpc/: Cargo.toml
crates/libs/lib-rpc/src/: lib.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: lib.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/src/: main.rs
crates/tools/ids-generator/: Cargo.toml
crates/tools/ids-generator/src/: bitset.rs  lib.rs
