[workspace]
resolver = "2"
members = [
    "crates/libs/lib-utils",
    "crates/libs/lib-rpc",
    "crates/libs/lib-auth",
    "crates/libs/lib-core",
    "crates/services/web-server",
    "crates/tools/ids-generator",
]


[workspace.dependencies]
ahash = "0.8"
ring = "0.17"
parking_lot = { version = "0.12", features = [
    "send_guard",
    "arc_lock",
    "nightly",
] }

[profile.release]
debug = false           # Added Debug for trying to get hot spots in the code
lto = "fat"
opt-level = 3
codegen-units = 1
split-debuginfo = "off"
panic = "abort"
